Pass highContrast to charts. Fix label sizes in Options. Update dependencies

--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -198,6 +198,11 @@ fieldset {
     display: inline;
 }
 
+.name-val-pair,
+legend {
+    line-height: 2;
+}
+
 .name-val-pair {
     display: flex;
 
